fix letter spacing

--- a/src/css/specific/toc.css
+++ b/src/css/specific/toc.css
@@ -38,7 +38,7 @@
     color: var(--steel-2);
     font-family: var(--sans-serif-bold);
     font-weight: var(--weight-bold);
-    letter-spacing: -.03em;
+    letter-spacing: -.02em;
   }
 
   &:focus {
